# dr-changepoint

./: .gitignore  README.md
.beads/: issues.jsonl
.github/scripts/: schema_gate.py  wheel_dependency_gate.py
.github/scripts/tests/: test_schema_gate.py  test_wheel_dependency_gate.py
.github/workflows/: nightly-quality.yml  pr-checks.yml  release.yml  wheel-build.yml  wheel-smoke.yml
cpd/: Cargo.toml  VERSIONING.md
cpd/crates/cpd-bench/: Cargo.toml
cpd/crates/cpd-bench/benches/: cost_l2.rs  cost_multivariate.rs  cost_rank_cosine.rs  offline_fpop.rs  offline_wbs.rs
cpd/crates/cpd-bench/src/: lib.rs
cpd/crates/cpd-cli/: Cargo.toml
cpd/crates/cpd-cli/src/: lib.rs  main.rs
cpd/crates/cpd-core/: Cargo.toml
cpd/crates/cpd-core/src/: detectors.rs  diagnostics.rs  execution_context.rs  lib.rs  repro.rs  schema_migration.rs  time_series.rs
cpd/crates/cpd-costs/: Cargo.toml
cpd/crates/cpd-costs/src/: ar.rs  bernoulli.rs  cosine.rs  lib.rs  linear.rs  nig.rs  poisson.rs  rank.rs
cpd/crates/cpd-costs/tests/: multivariate_v1.rs  proptest_invariants.rs  rank_cosine_v1.rs
cpd/crates/cpd-doctor/: Cargo.toml
cpd/crates/cpd-doctor/src/: lib.rs  recommendation.rs
cpd/crates/cpd-doctor/tests/: ensemble_integration.rs
cpd/crates/cpd-eval/: Cargo.toml
cpd/crates/cpd-eval/src/: lib.rs
cpd/crates/cpd-offline/: Cargo.toml
cpd/crates/cpd-offline/src/: bottomup.rs  dynp.rs  fpop.rs  gp.rs  kernel.rs  lib.rs  pelt.rs  schema_migration.rs  wbs.rs  window.rs
cpd/crates/cpd-offline/tests/: proptest_invariants.rs  rank_cosine_integration.rs
cpd/crates/cpd-online/: Cargo.toml
cpd/crates/cpd-online/src/: baseline.rs  bocpd.rs  checkpoint.rs  event_time.rs  lib.rs
cpd/crates/cpd-online/tests/: concurrency.rs  perf.rs  soak.rs
cpd/crates/cpd-online/tests/support/: soak_harness.rs
cpd/crates/cpd-preprocess/: Cargo.toml
cpd/crates/cpd-preprocess/src/: lib.rs
cpd/crates/cpd-python/: Cargo.toml
cpd/crates/cpd-python/src/: error_map.rs  lib.rs  numpy_interop.rs  result_objects.rs
cpd/docs/: fuzzing.md  parity_bocpd_bayesian.md  python_apple_silicon_toolchain.md  release_security.md  result_json_contract.md
cpd/docs/templates/: schema_migration.md
cpd/fuzz/: Cargo.toml
cpd/fuzz/fuzz_targets/: online_bocpd_update_no_panic.rs
cpd/python/: QUICKSTART.md  README.md  RELEASING.md  pyproject.toml
cpd/python/cpd/: __init__.py  __init__.pyi  _cpd_rs.pyi
cpd/python/examples/: plot_breakpoints.py  synthetic_signal.py
cpd/python/examples/notebooks/: 01_offline_algorithms.ipynb  02_online_algorithms.ipynb  03_doctor_recommendations.ipynb  README.md
cpd/python/examples/notebooks/data/: doctor_recommendations_snapshot.json
cpd/python/tests/: bocpd_parity_harness.py  test_bocpd_bayesian_parity.py  test_bocpd_bayesian_parity_harness.py  test_fpop.py  test_integration_mvp_a.py  test_pelt.py  test_result_schema_contract.py  test_smoke.py
cpd/python/tests/fixtures/parity/: bocpd_manifest.v1.json
cpd/schemas/checkpoint/: online_detector_checkpoint.v0.schema.json  online_detector_checkpoint.v1.schema.json
cpd/schemas/config/: pipeline_spec.v0.schema.json
cpd/schemas/result/: offline_change_point_result.v1.schema.json
cpd/tests/fixtures/migrations/checkpoint/: online_detector_checkpoint.v0.json  online_detector_checkpoint.v1.json
cpd/tests/fixtures/migrations/config/: wbs.v1.json  wbs.v2.additive.json
cpd/tests/fixtures/schemas/checkpoint/: online_detector_checkpoint.v0.stub.json
cpd/tests/fixtures/schemas/config/: pipeline_spec.v0.stub.json
