[package]
name = "cpd-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cpd-core = { path = "../crates/cpd-core" }
cpd-costs = { path = "../crates/cpd-costs" }
cpd-offline = { path = "../crates/cpd-offline" }
cpd_python = { package = "cpd-python", path = "../crates/cpd-python", features = ["fuzzing"] }
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }

[[bin]]
name = "timeseries_view_no_panic"
path = "fuzz_targets/timeseries_view_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cost_segment_cost_no_panic"
path = "fuzz_targets/cost_segment_cost_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "offline_detectors_no_panic"
path = "fuzz_targets/offline_detectors_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "numpy_interop_no_panic"
path = "fuzz_targets/numpy_interop_no_panic.rs"
test = false
doc = false
bench = false

[workspace]
members = []
