[package]
name = "cpd-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = ["cpd-offline/rayon"]
serde = ["cpd-offline/serde"]
tracing = ["cpd-offline/tracing"]
simd = ["cpd-offline/simd"]
kernel = ["cpd-offline/kernel"]
kernel-approx = ["cpd-offline/kernel-approx"]
blas = ["cpd-offline/blas"]
gp = ["cpd-offline/gp"]
preprocess = ["cpd-offline/preprocess"]
repro-strict = ["cpd-offline/repro-strict"]

[dependencies]
cpd-core = { path = "../cpd-core" }
cpd-costs = { path = "../cpd-costs" }
cpd-offline = { path = "../cpd-offline" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "numerics_prefix"
harness = false
path = "benches/numerics_prefix.rs"

[[bench]]
name = "cost_l2"
harness = false
path = "benches/cost_l2.rs"

[[bench]]
name = "cost_multivariate"
harness = false
path = "benches/cost_multivariate.rs"

[[bench]]
name = "cost_rank_cosine"
harness = false
path = "benches/cost_rank_cosine.rs"

[[bench]]
name = "offline_pelt"
harness = false
path = "benches/offline_pelt.rs"

[[bench]]
name = "offline_fpop"
harness = false
path = "benches/offline_fpop.rs"

[[bench]]
name = "offline_binseg"
harness = false
path = "benches/offline_binseg.rs"

[[bench]]
name = "offline_wbs"
harness = false
path = "benches/offline_wbs.rs"
