[package]
name = "cpd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "cpd"
path = "src/main.rs"

[features]
default = ["serde"]
rayon = ["cpd-doctor/rayon", "cpd-offline/rayon"]
serde = ["cpd-core/serde", "cpd-doctor/serde", "cpd-offline/serde"]
tracing = ["cpd-doctor/tracing", "cpd-offline/tracing"]
simd = ["cpd-doctor/simd", "cpd-offline/simd"]
kernel = ["cpd-doctor/kernel", "cpd-offline/kernel"]
kernel-approx = ["cpd-doctor/kernel-approx", "cpd-offline/kernel-approx"]
blas = ["cpd-doctor/blas", "cpd-offline/blas"]
gp = ["cpd-doctor/gp", "cpd-offline/gp"]
preprocess = ["cpd-doctor/preprocess", "cpd-offline/preprocess"]
repro-strict = ["cpd-doctor/repro-strict", "cpd-offline/repro-strict"]

[dependencies]
cpd-core = { path = "../cpd-core" }
cpd-doctor = { path = "../cpd-doctor" }
cpd-eval = { path = "../cpd-eval" }
cpd-offline = { path = "../cpd-offline" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
