[package]
name = "cpd-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-level changepoint detection facade across cpd-rs crates."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cpd-doctor"
keywords = ["changepoint", "time-series", "statistics"]
categories = ["algorithms", "science"]

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = ["cpd-offline/rayon", "cpd-online/rayon"]
serde = ["cpd-core/serde", "cpd-offline/serde", "cpd-online/serde", "dep:serde"]
tracing = ["cpd-offline/tracing", "cpd-online/tracing"]
simd = ["cpd-offline/simd", "cpd-online/simd"]
kernel = ["cpd-offline/kernel", "cpd-online/kernel"]
kernel-approx = ["cpd-offline/kernel-approx", "cpd-online/kernel-approx"]
blas = ["cpd-offline/blas", "cpd-online/blas"]
gp = ["cpd-offline/gp", "cpd-online/gp"]
preprocess = [
  "cpd-offline/preprocess",
  "cpd-online/preprocess",
  "dep:cpd-preprocess",
  "cpd-preprocess/preprocess",
]
repro-strict = ["cpd-offline/repro-strict", "cpd-online/repro-strict"]

[dependencies]
cpd-core = { version = "0.1.0", path = "../cpd-core" }
cpd-costs = { version = "0.1.0", path = "../cpd-costs" }
cpd-offline = { version = "0.1.0", path = "../cpd-offline" }
cpd-online = { version = "0.1.0", path = "../cpd-online" }
cpd-preprocess = { version = "0.1.0", path = "../cpd-preprocess", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
