[package]
name = "cpd-offline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Offline changepoint detectors for batch workloads in cpd-rs."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cpd-offline"
keywords = ["changepoint", "time-series", "statistics"]
categories = ["algorithms", "science"]

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = ["cpd-core/rayon", "cpd-costs/rayon", "dep:rayon"]
serde = ["cpd-core/serde", "cpd-costs/serde", "dep:serde", "dep:serde_json"]
tracing = ["cpd-core/tracing", "cpd-costs/tracing"]
simd = ["cpd-core/simd", "cpd-costs/simd"]
kernel = ["cpd-core/kernel", "cpd-costs/kernel"]
kernel-approx = ["cpd-core/kernel-approx", "cpd-costs/kernel-approx"]
blas = ["cpd-core/blas", "cpd-costs/blas"]
gp = ["cpd-core/gp", "cpd-costs/gp"]
preprocess = ["cpd-core/preprocess", "cpd-costs/preprocess"]
repro-strict = ["cpd-core/repro-strict", "cpd-costs/repro-strict"]

[dependencies]
cpd-core = { version = "0.1.0", path = "../cpd-core" }
cpd-costs = { version = "0.1.0", path = "../cpd-costs" }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
