[package]
name = "cpd-online"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = ["cpd-core/rayon", "cpd-costs/rayon"]
serde = ["cpd-core/serde", "cpd-costs/serde"]
tracing = ["cpd-core/tracing", "cpd-costs/tracing"]
simd = ["cpd-core/simd", "cpd-costs/simd"]
kernel = ["cpd-core/kernel", "cpd-costs/kernel"]
kernel-approx = ["cpd-core/kernel-approx", "cpd-costs/kernel-approx"]
blas = ["cpd-core/blas", "cpd-costs/blas"]
gp = ["cpd-core/gp", "cpd-costs/gp"]
preprocess = ["cpd-core/preprocess", "cpd-costs/preprocess"]
repro-strict = ["cpd-core/repro-strict", "cpd-costs/repro-strict"]

[dependencies]
cpd-core = { path = "../cpd-core" }
cpd-costs = { path = "../cpd-costs" }
