[package]
name = "cpd-online"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Online changepoint detectors for streaming workloads in cpd-rs."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cpd-online"
keywords = ["changepoint", "time-series", "statistics"]
categories = ["algorithms", "science"]

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = ["cpd-core/rayon", "cpd-costs/rayon"]
serde = [
  "cpd-core/serde",
  "cpd-costs/serde",
  "dep:serde",
  "dep:serde_json",
  "dep:bincode",
  "dep:crc32fast",
]
tracing = ["cpd-core/tracing", "cpd-costs/tracing"]
simd = ["cpd-core/simd", "cpd-costs/simd"]
kernel = ["cpd-core/kernel", "cpd-costs/kernel"]
kernel-approx = ["cpd-core/kernel-approx", "cpd-costs/kernel-approx"]
blas = ["cpd-core/blas", "cpd-costs/blas"]
gp = ["cpd-core/gp", "cpd-costs/gp"]
preprocess = ["cpd-core/preprocess", "cpd-costs/preprocess"]
repro-strict = ["cpd-core/repro-strict", "cpd-costs/repro-strict"]

[dependencies]
cpd-core = { version = "0.1.0", path = "../cpd-core" }
cpd-costs = { version = "0.1.0", path = "../cpd-costs" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }
crc32fast = { version = "1", optional = true }
