[package]
name = "cpd-python"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_cpd_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
rayon = ["cpd-doctor/rayon"]
serde = ["cpd-doctor/serde", "dep:serde_json"]
tracing = ["cpd-doctor/tracing"]
simd = ["cpd-doctor/simd"]
kernel = ["cpd-doctor/kernel"]
kernel-approx = ["cpd-doctor/kernel-approx"]
blas = ["cpd-doctor/blas"]
gp = ["cpd-doctor/gp"]
preprocess = ["cpd-doctor/preprocess"]
repro-strict = ["cpd-doctor/repro-strict"]

[dependencies]
cpd-core = { path = "../cpd-core" }
cpd-offline = { path = "../cpd-offline" }
cpd-costs = { path = "../cpd-costs" }
cpd-online = { path = "../cpd-online" }
cpd-doctor = { path = "../cpd-doctor" }
pyo3 = { version = "0.22", features = ["abi3-py39", "auto-initialize"] }
numpy = "0.22"
serde_json = { version = "1", optional = true }
