[package]
name = "cpd-python"
version = "0.0.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "_cpd_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
fuzzing = []
rayon = ["cpd-doctor/rayon"]
serde = ["cpd-doctor/serde", "dep:serde_json"]
tracing = ["cpd-doctor/tracing"]
simd = ["cpd-doctor/simd"]
kernel = ["cpd-doctor/kernel"]
kernel-approx = ["cpd-doctor/kernel-approx"]
blas = ["cpd-doctor/blas"]
gp = ["cpd-doctor/gp"]
preprocess = ["cpd-doctor/preprocess", "dep:cpd-preprocess"]
repro-strict = ["cpd-doctor/repro-strict"]

[dependencies]
cpd-core = { path = "../cpd-core" }
cpd-offline = { path = "../cpd-offline" }
cpd-costs = { path = "../cpd-costs" }
cpd-online = { path = "../cpd-online" }
cpd-doctor = { path = "../cpd-doctor" }
cpd-preprocess = { path = "../cpd-preprocess", optional = true, features = ["preprocess"] }
pyo3 = { version = "0.24.1", features = ["abi3-py39"] }
numpy = "0.24"
serde_json = { version = "1", optional = true }
